updates for java 11, clojure 1.10