@@ -1,6 +1,6 @@
 @echo off
-:: palisades.lakes@gmail.com
-:: 2017-10-07
+:: mcdonald.john.alan@gmail.com
+:: 2018-12-17
 
 ::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
 set GC=
@@ -11,8 +11,8 @@ set COMPRESSED=
 set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
-set PROF=
-::set PROF=-Xrunhprof:cpu=samples,depth=128,thread=y,doe=y
+::set PROF=
+set PROF=-Xrunhprof:cpu=samples,depth=96,thread=y,doe=y
 
 ::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
 set THRUPUT=-d64 -server
@@ -21,9 +21,10 @@ set THRUPUT=-d64 -server
 ::set XMX=-Xms29g -Xmx29g -Xmn11g 
 set XMX=-Xms12g -Xmx12g -Xmn5g 
 
+set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
 set CP=-cp ./src/scripts/clojure;lib/*
 set JAVA="%JAVA_HOME%\bin\java"
 
-set CMD=%JAVA% %THRUPUT% -ea -dsa -Xbatch %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %CP% clojure.main %*
+set CMD=%JAVA% %THRUPUT% -ea %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
 ::echo %CMD%
 %CMD%
